#1103 - adding flexibility to where the swidtag file will be created based on environment variable